--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.3",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
     "framer-motion": "^8.5.0",
