--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.3",
+    "@nivo/geo": "^0.84.0",
+    "@nivo/radar": "^0.84.0",
     "@paypal/react-paypal-js": "^8.1.3",
     "@types/node": "18.11.18",
     "@types/react": "^18.2.45",
